Completati test livello service